# docic_scanner_sdk_upgraded

./: README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/docic/docic_mobile_sdk/: DocicMobileSdkPlugin.kt
android/src/test/kotlin/com/docic/docic_mobile_sdk/: DocicMobileSdkPluginTest.kt
cpp/: document_processor.cpp  document_processor.h  document_scanner.cpp  document_scanner.h  main.cpp  tesseract_ocr.cpp  tesseract_ocr.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/assets/: tessdata_config.json
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: docic_mobile_sdk.dart  docic_mobile_sdk_method_channel.dart  docic_mobile_sdk_platform_interface.dart  document_scanner_ocr.dart  main.dart
lib/src/: add_page_popup.dart  camera_screen.dart  docic_mobile_sdk.dart  scan_image_screen.dart  scanned_image.dart
lib/src/models/: native_communication_models.dart  scanner_result_model.dart
lib/src/services/: image_editing_service.dart  pdf_service.dart  tessdata_service.dart
lib/src/utils/: scanned_images_manager.dart
lib/src/widgets/: add_page_popup.dart  camera_screen.dart  contours_painter.dart  scan_image_from_camera.dart  scan_image_screen.dart  (+2 more)
test/: docic_mobile_sdk_method_channel_test.dart  docic_mobile_sdk_test.dart  widget_test.dart
(+8 files in other folders)
